# StoreFlare

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: jobs.yml
dumped_db/: 1a75af7759f6aa3e5f3bc4fb74055da0_web_analytics.json
storeflare/: cli.py  transform.py
storeflare/driver/: jsondb.py  notion.py  sqlite.py
